<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back_button_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/header1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/signUp_header1"
        android:textColor="#2B2B2B"
        android:textSize="34sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/header2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/signUp_header2"
        android:fontFamily="@font/poppins"
        android:textColor="#7a7a7a"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/header1" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="11dp"
        app:boxCornerRadiusTopStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusBottomEnd="14dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header2"
        android:hint="@string/hint_fullName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="11dp"

        app:boxCornerRadiusTopStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusBottomEnd="14dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        android:hint="@string/hint_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="11dp"
        app:passwordToggleTint="#AEAEB2"
        app:passwordToggleEnabled="true"
        app:boxCornerRadiusTopStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusBottomEnd="14dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        android:hint="@string/hint_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="11dp"
        android:background="@drawable/gradient_background"
        android:text="@string/signUp_button"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>
    <TextView
        android:id="@+id/header3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="10dp"
        android:text="@string/or"
        android:fontFamily="@font/poppins"
        android:textColor="#2B2B2B"
        android:textSize="17sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
         />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpFacebookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="17dp"
        app:layout_constraintTop_toBottomOf="@id/header3"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/shape_facebook_button"

        android:fontFamily="@font/poppins"
        android:textColor="#fff"
        android:text="@string/signUp_facebook"
        android:drawableStart="@drawable/ic_facebook_foreground"
        android:textSize="17sp"
        android:textAllCaps="false"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpGoogleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:paddingHorizontal="22dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/signUpFacebookButton"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"

        android:background="@drawable/shape_google_button"
        android:backgroundTint="#fff"
        android:text="@string/signUp_google"
        android:drawableStart="@drawable/ic_google"
        android:textColor="#2b2b2b"
        android:textSize="17sp"
        android:textAllCaps="false"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        app:layout_constraintTop_toBottomOf="@id/signUpGoogleButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>