<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    >
    <LinearLayout
            android:id="@+id/interaction"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/rounded_top_corners"
            android:weightSum="10"
            android:backgroundTint="@color/white"
            android:layout_gravity="center">

            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter"
                android:textStyle="bold"
                android:text="@string/main_header1" />

            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ellipsize="end"
                android:maxLines="2"
                android:gravity="center"
                android:textSize="15sp"
                android:fontFamily="@font/inter"
                android:text="@string/main_header2" />

            <Button
                android:id="@+id/getStartedButton"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:paddingVertical="13dp"

                android:text="@string/get_started_button"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:fontFamily="@font/inter"
                android:backgroundTint="@color/blue"
                app:cornerRadius="23dp" />
            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_weight="4"
                android:maxLines="2"
                android:gravity="center"
                android:fontFamily="@font/inter"
                android:textSize="15sp"
                android:text="@string/main_header3"/>
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>